apps/env/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: env
  namespace: production
spec:
  selector:
    matchLabels:
      app: env
  template:
    metadata:
      labels:
        app: env
    spec:
      containers:
      - name: env
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
          - |
            while true; do
              echo -e "HTTP/1.1 200 OK\n\nEnvironment Variables:\n$(env)" | nc -l -p 8080
            done
        ports:
        - containerPort: 8080
