apps/env/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: env
  namespace: production
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: env
